Basic vue-router functionality working

--- a/vuecli-vuetify-cd/package.json
+++ b/vuecli-vuetify-cd/package.json
@@ -16,6 +16,7 @@
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
+    "@mdi/font": "^3.8.95",
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-e2e-nightwatch": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
