--- a/vuecli-vuetify-cd/package.json
+++ b/vuecli-vuetify-cd/package.json
@@ -27,11 +27,14 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "deepmerge": "^4.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "fibers": "^4.0.1",
     "node-sass": "^4.9.0",
-    "sass": "^1.17.4",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.22.9",
+    "sass-loader": "^7.2.0",
+    "svg-inline-loader": "^0.8.0",
     "vue-cli-plugin-vuetify": "^0.6.1",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
