--- a/vue.js-vuetify-cd/package.json
+++ b/vue.js-vuetify-cd/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "test": "npm run test:unit && vue-cli-service test:e2e --config nightwatch.conf.js --env firefox,chrome,safari"
   },
   "dependencies": {
     "core-js": "^2.6.5",
