--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .DS_Store
-.DS_Store
 node_modules
 selenium-debug.log
 vscode.code-workspace
@@ -8,3 +7,4 @@ yarn.lock
 vscode.code-workspace
 selenium-debug.log
 tests/e2e/reports/*.test.xml
+dist/
